--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "name": "psychobunny",
     "email": "psycho.bunny@hotmail.com"
   },
+  "nbbpm": {
+    "compatibility": "^0.6.0"
+  },
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/psychobunny/nodebb-plugin-custom-homepage/issues"
