--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodebb-plugin-custom-homepage",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "Allows you to define a custom homepage for NodeBB",
   "main": "library.js",
   "scripts": {
@@ -31,5 +31,8 @@
   "readme": "",
   "readmeFilename": "README.md",
   "_id": "nodebb-plugin-custom-homepage@0.0.1",
-  "_from": "nodebb-plugin-custom-homepage@~0.0.1"
+  "_from": "nodebb-plugin-custom-homepage@~0.0.1",
+  "dependencies": {
+    "validator": "^3.39.0"
+  }
 }
